force-app/main/default/objects/Order/fields/External_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Order_Number__c</fullName>
    <description>Customer-facing order number (e.g. A-1001) from the commerce system. Upsert key.</description>
    <externalId>true</externalId>
    <label>External Order Number</label>
    <length>20</length>
    <unique>true</unique>
    <type>Text</type>
</CustomField>