force-app/main/default/objects/Order/fields/Failed_Verification_Count__c.field-meta.xml
<CustomField>
    <fullName>Failed_Verification_Count__c</fullName>
    <description>Failed identity checks against this order across all agent sessions. Reset on success or when a lock starts.</description>
    <label>Failed Verification Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>