force-app/main/default/objects/Order/fields/Fulfillment_Status__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Status__c</fullName>
    <description>Shipping lifecycle from the fulfillment system. Separate from the standard Order Status (Draft/Activated).</description>
    <label>Fulfillment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Processing</fullName><default>true</default><label>Processing</label></value>
            <value><fullName>Shipped</fullName><default>false</default><label>Shipped</label></value>
            <value><fullName>Delivered</fullName><default>false</default><label>Delivered</label></value>
            <value><fullName>Returned</fullName><default>false</default><label>Returned</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>