force-app/main/default/objects/Order/fields/Verification_Locked_Until__c.field-meta.xml
<CustomField>
    <fullName>Verification_Locked_Until__c</fullName>
    <description>While in the future, agent verification for this order is refused even with correct details.</description>
    <label>Verification Locked Until</label>
    <type>DateTime</type>
</CustomField>